--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="template.css">
+    <link rel="icon" type="image/png" href="/images/feutech.PNG" >
+</head>
     <title>iCARE</title>
 </head>
 <body>
