--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="/images/feutech.PNG">
+    <link rel="icon" type="image/png" href="images/feutech.PNG">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="template">
-        <img src="/images/tams.PNG" alt="tams" id="tams">
-        <img src="/images/dahon.JPG" alt="dahon" id="dahon">
-        <img src="/images/icare.PNG" alt="icare" id="icare">
-        <img src="/images/feutech.PNG" alt="feutech" id="feutech">
+        <img src="images/tams.PNG" alt="tams" id="tams">
+        <img src="images/dahon.JPG" alt="dahon" id="dahon">
+        <img src="images/icare.PNG" alt="icare" id="icare">
+        <img src="images/feutech.PNG" alt="feutech" id="feutech">
     </div> 
 
     <div class="buttons">
