--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="template">
-        <img src="images/tams.PNG" alt="tams" id="tams">
-        <img src="images/dahon.JPG" alt="dahon" id="dahon">
-        <img src="images/icare.PNG" alt="icare" id="icare">
-        <img src="images/feutech.PNG" alt="feutech" id="feutech">
+        <img src="/images/tams.PNG" alt="tams" id="tams">
+        <img src="/images/dahon.JPG" alt="dahon" id="dahon">
+        <img src="/images/icare.PNG" alt="icare" id="icare">
+        <img src="/images/feutech.PNG" alt="feutech" id="feutech">
     </div> 
 
     <div class="buttons">
